--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
 	},
 	"homepage": "https://github.com/wmzhong/reSan#readme",
 	"devDependencies": {
-		"babel-core": "^6.26.0",
+		"babel-cli": "^6.26.0",
+		"babel-core": "^5.8.38",
 		"babel-loader": "^7.1.3",
 		"babel-polyfill": "^6.26.0",
 		"babel-preset-es2015": "^6.24.1",
+		"babel-register": "^6.26.0",
 		"browser-sync": "^2.23.6",
 		"chai": "^4.1.2",
 		"gulp": "^3.9.1",
